--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> An accumulation of transit-related information for the SoCal region </h1>
 
-<h3> <a href='https://github.com/aryam7/transit/blob/master/dates.md'> Dates for Key Projects in the SoCal Region </a> </h3>
+<h3> <a href='dates.html'> Dates for Key Projects in the SoCal Region </a> </h3>
 
 <h3> A Map of Double Tracking Projects on the LOSSAN CORRIDOR in San Diego County </h3>
 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EBF-loduw8etBHDyVaaIETLRAzhGxiKS" width="640" height="480"></iframe>
