--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<h1> An accumulation of transit-related information for the SoCal region </h1>
+<html>
+<head>
+<meta name="google-site-verification" content="yg_q_pPklZ_bWOfoSnBDXQl_M5v9e0bryZiAfJ2gKXo" />
+</head>
+<body>
+   <h1> An accumulation of transit-related information for the SoCal region </h1>
 
-<h3> <a href='dates.html'> Dates for Key Projects in the SoCal Region </a> </h3>
+  <h3> <a href='dates.html'> Dates for Key Projects in the SoCal Region </a> </h3>
 
-<h4> <a href='https://scag.ca.gov/sites/main/files/file-attachments/0903fconnectsocal_project-list_0.pdf'> A list of all SoCal Projects </a> </h4>
+  <h4> <a href='https://scag.ca.gov/sites/main/files/file-attachments/0903fconnectsocal_project-list_0.pdf'> A list of all SoCal Projects </a> </h4>
 
-<h3> A Map of Double Tracking Projects on the LOSSAN CORRIDOR in San Diego County </h3>
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EBF-loduw8etBHDyVaaIETLRAzhGxiKS" width="640" height="480"></iframe>
+  <h3> A Map of Double Tracking Projects on the LOSSAN CORRIDOR in San Diego County </h3>
+  <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EBF-loduw8etBHDyVaaIETLRAzhGxiKS" width="640" height="480"></iframe>
+</body>
+</html>
